# GroceryStoreAPI

./: 404.html  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci-cd.yml  django.yml
1-home/: index.html
2-info/: index.html
3-intro/: index.html
4-api/: index.html
5-technologies/: index.html
apps/authorization/: apps.py  tasks.py  urls.py  views.py
apps/product/: admin.py  models.py  serializers.py  urls.py  views.py
apps/product/api/: serializers.py  viewsets.py
apps/product/migrations/: 0002_rename_productclasses_category_and_more.py
apps/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_alter_category_options_alter_product_name.py  0003_alter_product_category.py  0004_rename_quantity_product_stock.py  0005_product_unit.py
apps/products/tests/: test_categories.py  test_products.py
apps/reports/: admin.py  models.py  serializers.py  urls.py  views.py
apps/reports/migrations/: 0001_initial.py  0002_alter_reports_options.py  (+2 more)
apps/sales/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
docs/: 1-home.md  2-info.md  3-intro.md  4-api.md  5-technologies.md  index.md
product/api/: serializers.py  viewsets.py
project/: celery.py  settings.py  urls.py
search/: search_index.json
src/mixins/: log.py
src/project/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
(+39 files in other folders)
