[tool.poetry]
name = "grocerystoreapi"
version = "0.1.0"
description = ""
authors = ["Igor Candido <igorcr39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.5"
djangorestframework = "3.14.0"
drf-yasg = "1.21.4"
djangorestframework-simplejwt = "5.2.2"
redis = "3.4.1"
celery = "5.2.7"
django-celery-results = "2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
pytest-django = "4.5.2"
isort = "^5.12.0"
mkdocs = "^1.4.3"
blue = "0.7.0"
prospector = "1.6.0"
pip-audit = "^2.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
